<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single" android:id="@+id/drawer_list_group">
    </group>

    <item android:title="@string/options" android:menuCategory="system">
        <menu>
            <item
                android:id="@+id/nav_unlock"
                android:icon="@android:drawable/ic_lock_idle_lock"
                android:title="@string/unlock" />
            <item
                android:id="@+id/nav_manage"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings" />

            <item
                android:id="@+id/nav_exit"
                android:icon="@android:drawable/ic_menu_close_clear_cancel"
                android:title="@string/exit" />
        </menu>
    </item>
</menu>
