<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.scop.org.fydeph.PostActivity">

    <item
        android:id="@+id/action_openlink"
        android:orderInCategory="100"
        android:title="@string/open_link"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_markread"
        android:orderInCategory="100"
        android:title="@string/automark_read"
        android:checkable="true"
        app:showAsAction="never" />

    <item android:id="@+id/action_fav"
        android:icon="@drawable/ic_heart_off"
        android:title="@string/favorite"
        app:showAsAction="always"
        android:enabled="true"
        android:visible="true"/>

    <item android:id="@+id/action_unread"
        android:icon="@drawable/ic_circle_empty_white"
        android:title="@string/unread"
        app:showAsAction="always"
        android:enabled="true"
        android:visible="true"/>
</menu>
