<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.scop.itfeeds.LoginActivity" >

        <requestFocus />



        <EditText
            android:id="@+id/loginfield"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/goLogin"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true"
            android:ems="10"
            android:hint="@string/username"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:text="" />

        <EditText
            android:id="@+id/passfield"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
			android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/goLogin"
            android:ems="10"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:singleLine="true"
            android:text="" />
        
        <Button
            android:id="@+id/goLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/passfield"
            android:clickable="true"
            android:text="@string/login"
            android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>